# cache-analysis

./: .bazelignore  .bazelrc  .clang-format  .clang-tidy  .gitignore  README.md  WORKSPACE
lib/Analysis/: BUILD.bazel  CacheAnalysis.cpp  CacheAnalysis.h  CacheAnalysisGraph.cpp  CacheAnalysisGraph.h  IndexComputationGraph.cpp  IndexComputationGraph.h  LoopCacheAnalysis.cpp  LoopCacheAnalysis.h  LoopCounter.cpp  LoopCounter.h  Utils.h
tools/: BUILD.bazel  cache-opt.cpp
