package(
    default_visibility = ["//visibility:private"],
    features = ["layering_check"],
)

cc_library(
    name = "LoopCounter",
    srcs = ["LoopCounter.cpp"],
    hdrs = ["LoopCounter.h"],
    visibility = ["//visibility:public"],
    deps = [
        "@llvm-project//llvm:Support",
        "@llvm-project//mlir:AffineDialect",
        "@llvm-project//mlir:IR",
        "@llvm-project//mlir:Pass",
        "@llvm-project//mlir:SCFDialect",
        "@llvm-project//mlir:Support",
    ],
)

cc_library(
    name = "LoopCacheAnalysis",
    srcs = ["LoopCacheAnalysis.cpp"],
    hdrs = ["LoopCacheAnalysis.h"],
    visibility = ["//visibility:public"],
    deps = [
        "@llvm-project//llvm:Support",
        "@llvm-project//mlir:AffineAnalysis",
        "@llvm-project//mlir:AffineDialect",
        "@llvm-project//mlir:FuncDialect",
        "@llvm-project//mlir:IR",
        "@llvm-project//mlir:Pass",
        "@llvm-project//mlir:SCFDialect",
        "@llvm-project//mlir:Support",
    ],
)
